unpackaged/main/default/objects/Custom_Note__c/Custom_Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>