unpackaged/main/default/objects/Custom_Note__c/fields/Compose_Text__c.field-meta.xml
<CustomField>
    <fullName>Compose_Text__c</fullName>
    <label>Compose Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>