unpackaged/main/default/objects/Custom_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal - Billing</fullName>
            </value>
            <value>
                <fullName>Internal - Shipping</fullName>
            </value>
            <value>
                <fullName>Internal - Other</fullName>
            </value>
            <value>
                <fullName>Customer Notes</fullName>
            </value>
            <value>
                <fullName>Customer Facing - Billing</fullName>
            </value>
            <value>
                <fullName>Customer Facing - Shipping</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>