unpackaged/main/default/objects/Custom_Note__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notes (Supplier)</relationshipLabel>
    <relationshipName>Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>